--- a/index.html
+++ b/index.html
@@ -56,8 +56,10 @@
     <!-- Main Content -->
     <div class="flex">
       <!-- Left Menu -->
-      <aside class="pr-6 pl-10 pt-6 min-w-[100px] lg:min-w-[200px]">
-        <ul class="navText text-xs md:text-xl">
+      <aside
+        class="pr-6 pl-10 pt-6 min-w-[100px] lg:min-w-[200px] 2xl:min-w-[400px]"
+      >
+        <ul class="navText text-xs md:text-xl 2xl:text-2xl">
           <li class="mb-6">
             <a href="#" class="flex items-center active"
               ><img src="./img/add-user.png" alt="" class="mr-2" />Active</a
