--- a/index.html
+++ b/index.html
@@ -27,27 +27,44 @@
       >
         <li class="flex">
           <a href="#" class="flex items-center"
-            ><img src="./img/grid.png" alt="" class="mr-2" />Overview</a
+            ><img
+              src="./img/grid.png"
+              alt=""
+              class="mr-2 2xl:text-2xl"
+            />Overview</a
           >
         </li>
         <li class="flex">
           <a href="#" class="flex items-center active"
-            ><img src="./img/add-user.png" alt="" class="mr-2" />Members</a
+            ><img
+              src="./img/add-user.png"
+              alt=""
+              class="mr-2 2xl:text-2xl"
+            />Members</a
           >
         </li>
         <li class="flex">
           <a href="#" class="flex items-center"
-            ><img src="./img/exploration.png" class="mr-2" />Analytics</a
+            ><img
+              src="./img/exploration.png"
+              class="mr-2 2xl:text-2xl"
+            />Analytics</a
           >
         </li>
         <li class="flex">
           <a href="#" class="flex items-center"
-            ><img src="./img/lightning.png" class="mr-2" />Integrations</a
+            ><img
+              src="./img/lightning.png"
+              class="mr-2 2xl:text-2xl"
+            />Integrations</a
           >
         </li>
         <li class="flex">
           <a href="#" class="flex items-center"
-            ><img src="./img/envelope.png" class="mr-2" />Broadcasts</a
+            ><img
+              src="./img/envelope.png"
+              class="mr-2 2xl:text-2xl"
+            />Broadcasts</a
           >
         </li>
       </ul>
@@ -62,28 +79,47 @@
         <ul class="navText text-xs md:text-xl 2xl:text-2xl">
           <li class="mb-6">
             <a href="#" class="flex items-center active"
-              ><img src="./img/add-user.png" alt="" class="mr-2" />Active</a
+              ><img
+                src="./img/add-user.png"
+                alt=""
+                class="mr-2 2xl:text-2xl"
+              />Active</a
             >
           </li>
           <li class="mb-6">
             <a href="#" class="flex items-center"
-              ><img src="./img/refer.png" alt="" class="mr-2" />Referrals</a
+              ><img
+                src="./img/refer.png"
+                alt=""
+                class="mr-2 2xl:text-2xl"
+              />Referrals</a
             >
           </li>
           <li class="mb-6">
             <a href="#" class="flex items-center"
-              ><img src="./img/checked.png" alt="" class="mr-2" />Winners</a
+              ><img
+                src="./img/checked.png"
+                alt=""
+                class="mr-2 2xl:text-2xl"
+              />Winners</a
             >
           </li>
           <li class="mb-6">
             <a href="#" class="flex items-center"
-              ><img src="./img/palm-of-hand.png" alt="" class="mr-2" />High
-              Risk</a
+              ><img
+                src="./img/palm-of-hand.png"
+                alt=""
+                class="mr-2 2xl:text-2xl"
+              />High Risk</a
             >
           </li>
           <li class="mb-6">
             <a href="#" class="flex items-center"
-              ><img src="./img/export.png" alt="" class="mr-2" />Import</a
+              ><img
+                src="./img/export.png"
+                alt=""
+                class="mr-2 2xl:text-2xl"
+              />Import</a
             >
           </li>
         </ul>
@@ -92,7 +128,7 @@
       <!-- Center Content -->
 
       <main
-        class="md:ml-5 bg-[conic-gradient(at_bottom_right,_var(--tw-gradient-stops))] from-blue-700 via-blue-800 to-gray-900 w-[80%]"
+        class="md:ml-5 bg-[conic-gradient(at_bottom_right,_var(--tw-gradient-stops))] from-blue-700 via-blue-800 to-gray-900 w-[80%] 2xl:text-2xl 2xl:w-full 2xl:pl-4"
       >
         <div
           class="mt-2 bg-opacity-50 mx-8 full px-6 pt-5 pb-20 mb-4 rounded-md border border-gray-100 bg-clip-padding backdrop-filter backdrop-blur-md bg-gray-400"
@@ -183,7 +219,7 @@
 
           <table class="w-full">
             <thead class="vertical-line border-b">
-              <tr class="uppercase">
+              <tr class="uppercase 2xl:text-2xl">
                 <th class="p-2 text-left"><input type="checkbox" /></th>
                 <th class="p-2 text-left">#</th>
                 <th class="p-2 text-left">Subscriber</th>
@@ -194,7 +230,7 @@
             </thead>
 
             <tbody>
-              <tr class="border-b">
+              <tr class="border-b 2xl:text-2xl">
                 <td class="p-2 max-h-[65px]"><input type="checkbox" /></td>
                 <td class="p-2 max-h-[65px]">5th</td>
                 <td class="p-2 flex items-center max-h-[65px]">
@@ -216,7 +252,7 @@
                 <td class="p-2 max-h-[65px]">2</td>
                 <!-- Add more table data as needed -->
               </tr>
-              <tr class="border-b">
+              <tr class="border-b 2xl:text-2xl">
                 <td class="p-2 max-h-[65px]"><input type="checkbox" /></td>
                 <td class="p-2 max-h-[65px]">5th</td>
                 <td class="p-2 flex items-center max-h-[65px]">
@@ -238,7 +274,7 @@
                 <td class="p-2 max-h-[65px]">2</td>
                 <!-- Add more table data as needed -->
               </tr>
-              <tr class="border-b">
+              <tr class="border-b 2xl:text-2xl">
                 <td class="p-2 max-h-[65px]"><input type="checkbox" /></td>
                 <td class="p-2 max-h-[65px]">5th</td>
                 <td class="p-2 flex items-center max-h-[65px]">
@@ -258,7 +294,7 @@
                 <td class="p-2 max-h-[65px]">2</td>
                 <!-- Add more table data as needed -->
               </tr>
-              <tr class="border-b">
+              <tr class="border-b 2xl:text-2xl">
                 <td class="p-2 max-h-[65px]"><input type="checkbox" /></td>
                 <td class="p-2 max-h-[65px]">5th</td>
                 <td class="p-2 flex items-center max-h-[65px]">
@@ -278,7 +314,7 @@
                 <td class="p-2 max-h-[65px]">2</td>
                 <!-- Add more table data as needed -->
               </tr>
-              <tr class="border-b">
+              <tr class="border-b 2xl:text-2xl">
                 <td class="p-2 max-h-[65px]"><input type="checkbox" /></td>
                 <td class="p-2 max-h-[65px]">5th</td>
                 <td class="p-2 flex items-center max-h-[65px]">
@@ -298,7 +334,7 @@
                 <td class="p-2 max-h-[65px]">2</td>
                 <!-- Add more table data as needed -->
               </tr>
-              <tr class="border-b">
+              <tr class="border-b 2xl:text-2xl">
                 <td class="p-2 max-h-[65px]"><input type="checkbox" /></td>
                 <td class="p-2 max-h-[65px]">5th</td>
                 <td class="p-2 flex items-center max-h-[65px]">
