--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
     <link href="./dist/output.css" rel="stylesheet" />
   </head>
   <body class="bg-[#dee4e9]">
-    <nav class="py-6 px-14 bg-black flex item-center justify-between">
+    <nav
+      class="py-6 px-14 bg-black flex item-center justify-between 2xl:ml-[160px]"
+    >
       <div class="navText flex items-center">
         <img src="./img/home.png" alt="" />
         <h1 class="mx-4">Touchdime Dashboard</h1>
@@ -23,10 +25,10 @@
     <!-- Navigation Menu -->
     <nav class="py-6 px-14">
       <ul
-        class="flex items-center justify-between uppercase font-semibold navText text-xs lg:text-base"
+        class="flex items-center justify-between uppercase font-semibold navText text-xs lg:text-base 2xl:pl-"
       >
         <li class="flex">
-          <a href="#" class="flex items-center"
+          <a href="#" class="flex items-center 2xl:text-2xl"
             ><img
               src="./img/grid.png"
               alt=""
@@ -35,7 +37,7 @@
           >
         </li>
         <li class="flex">
-          <a href="#" class="flex items-center active"
+          <a href="#" class="flex items-center active 2xl:text-2xl"
             ><img
               src="./img/add-user.png"
               alt=""
@@ -44,7 +46,7 @@
           >
         </li>
         <li class="flex">
-          <a href="#" class="flex items-center"
+          <a href="#" class="flex items-center 2xl:text-2xl"
             ><img
               src="./img/exploration.png"
               class="mr-2 2xl:text-2xl"
@@ -52,7 +54,7 @@
           >
         </li>
         <li class="flex">
-          <a href="#" class="flex items-center"
+          <a href="#" class="flex items-center 2xl:text-2xl"
             ><img
               src="./img/lightning.png"
               class="mr-2 2xl:text-2xl"
@@ -60,7 +62,7 @@
           >
         </li>
         <li class="flex">
-          <a href="#" class="flex items-center"
+          <a href="#" class="flex items-center 2xl:text-2xl"
             ><img
               src="./img/envelope.png"
               class="mr-2 2xl:text-2xl"
@@ -73,9 +75,7 @@
     <!-- Main Content -->
     <div class="flex">
       <!-- Left Menu -->
-      <aside
-        class="pr-6 pl-10 pt-6 min-w-[100px] lg:min-w-[200px] 2xl:min-w-[400px]"
-      >
+      <aside class="pr-6 pl-10 pt-6 min-w-[100px] lg:min-w-[200px]">
         <ul class="navText text-xs md:text-xl 2xl:text-2xl">
           <li class="mb-6">
             <a href="#" class="flex items-center active"
