--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       </ul>
     </nav>
     <!-- Navigation Menu -->
-    <nav class="py-6 px-14">
+    <nav class="py-6 px-14 2xl:max-w-[1800px] 2xl:pl-[150px]">
       <ul
         class="flex items-center justify-between uppercase font-semibold navText text-xs lg:text-base 2xl:pl-"
       >
