--- a/index.html
+++ b/index.html
@@ -7,9 +7,7 @@
     <link href="./dist/output.css" rel="stylesheet" />
   </head>
   <body class="bg-[#dee4e9]">
-    <nav
-      class="py-6 px-14 bg-black flex item-center justify-between 2xl:ml-[160px]"
-    >
+    <nav class="py-6 px-14 bg-black flex item-center justify-between">
       <div class="navText flex items-center">
         <img src="./img/home.png" alt="" />
         <h1 class="mx-4">Touchdime Dashboard</h1>
@@ -23,7 +21,7 @@
       </ul>
     </nav>
     <!-- Navigation Menu -->
-    <nav class="py-6 px-14 2xl:max-w-[1800px] 2xl:pl-[150px]">
+    <nav class="py-6 px-14 2xl:max-w-[1800px] 2xl:pl-[220px]">
       <ul
         class="flex items-center justify-between uppercase font-semibold navText text-xs lg:text-base 2xl:pl-"
       >
